# TAF-1-INF22-BLOG-API

./: .env  .gitignore  README.md  alembic.ini  env.example  main.py  pyproject.toml  setup.sh  start.sh
alembic/: env.py
alembic/versions/: bb1b5a9a47e0_creation_des_tables.py
core/: deps.py  security.py
db/: database.py
endpoints/: article_route.py  auth_route.py
models/: article_model.py  user_model.py
schemas/: article_schema.py  user_schema.py
services/: article_service.py  user_service.py
